arrange processing service